--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "vite-project",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "sass": "^1.55.0",
-    "vite": "^3.1.0"
-  }
+    "name": "canvas-illustration-storyground-editor",
+    "version": "0.1.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
+    },
+    "devDependencies": {
+        "sass": "^1.55.0",
+        "vite": "^3.1.0"
+    }
 }
